Admin bar UI overlapping issue solved.

--- a/branches/maserati/common/css/xe.css
+++ b/branches/maserati/common/css/xe.css
@@ -3,7 +3,7 @@
 /* Element Reset */
 body,table,input,textarea,select,button{font-family:Tahoma,Geneva,sans-serif;font-size:12px}
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block}
-body{word-wrap:break-word}
+body{position:relative;word-wrap:break-word}
 a img{border:0}
 [hidden]{display:none}
 .xe_content img{max-width:100%;height:auto}
